--- a/index.html
+++ b/index.html
@@ -28,16 +28,16 @@
 				<dt><img src="images/tx.png" alt="" /></dt>
 				<dd>
 					<h1>
-						饮食健康
+						ABC健康
 					</h1>
 					<p>
-						山东
+						中国
 					</p>
 				</dd>
 			</dl>
 		</div>
 		<p style="font-size: 21px; font-weight: 500;display: flex; align-items: center; padding: 0 25px; box-sizing: border-box;">
-			关注饮食健康，守护幸福人生！<a href="javascript:;"><img height="21px" src="images/on.png" alt="" /></a>
+			关注健康，守护幸福人生！<a href="javascript:;"><img height="21px" src="images/on.png" alt="" /></a>
 		</p>
 		<h1 style="color: #585858; font-weight: 600; font-size: 26px; margin: 30px 0;padding: 0 25px; box-sizing: border-box;">
 			3篇原创内容
@@ -63,61 +63,111 @@
 			</li>
 		</ul>
 		<div class="main">
-			<div class="card">
-				<div class="cardTime">
-					2025年2月13日
+		<!-- 第一篇文章 -->
+			<a href="article1.html" class="card-link">
+				<div class="card">
+					<div class="cardTime">
+					2025年09月23日
+					</div>
+					<dl>
+						<dd>
+							<h2>
+								秋分养生指南：把握 “昼夜均寒暑平” 关键期，从起居饮食到情志运动
+							</h2>
+							<p>
+								阅读 5629  赞 577
+							</p>
+						</dd>
+						<dt>
+							<img src="images/img4.png" alt="" />
+						</dt>
+					</dl>
 				</div>
-				<dl>
-					<dd>
-						<h2>
-							“春分4不吃，吃了春难安”，今日春分，家人们千万不要乱吃来路不明的野菜
-						</h2>
-						<p>
-							阅读 149   赞 3
-						</p>
-					</dd>
-					<dt>
-						<img src="images/img1.jpg" alt="" />
-					</dt>
-				</dl>
-			</div>
-			<div class="card">
-				<div class="cardTime">
-					2025年1月2日
+			</a>
+		<!-- 第2篇文章 -->
+			<a href="article2.html" class="card-link">
+				<div class="card">
+					<div class="cardTime">
+					2025年03月20日
+					</div>
+					<dl>
+						<dd>
+							<h2>
+								“春分4不吃，吃了春难安”，今日春分，家人们千万不要乱吃来路不明的野菜
+							</h2>
+							<p>
+								阅读 7749  赞 509
+							</p>
+						</dd>
+						<dt>
+							<img src="images/img1.jpg" alt="" />
+						</dt>
+					</dl>
 				</div>
-				<dl>
-					<dd>
-						<h2>
-							老人如果每天喝牛奶，用不了几个月，睡眠质量就能得到改善
-						</h2>
-						<p>
-							阅读 1149   赞 77
-						</p>
-					</dd>
-					<dt>
-						<img src="images/img2.jpeg" alt="" />
-					</dt>
-				</dl>
-			</div>
-			<div class="card">
-				<div class="cardTime">
-					2024年12月23日
+			</a>
+			<!-- 第3篇文章 -->
+			<a href="article3.html" class="card-link">	
+				<div class="card">
+					<div class="cardTime">
+						2025年01月02日
+					</div>
+					<dl>
+						<dd>
+							<h2>
+								老人如果每天喝牛奶，用不了几个月，睡眠质量就能得到改善
+							</h2>
+							<p>
+								阅读 8543  赞 797
+							</p>
+						</dd>
+						<dt>
+							<img src="images/img2.jpeg" alt="" />
+						</dt>
+					</dl>
 				</div>
-				<dl>
-					<dd>
-						<h2>
-							医生：这三种饮食习惯，心脏病患者一定要改掉，或会加重心脏负担
-						</h2>
-						<p>
-							阅读 5369  赞 326
-						</p>
-					</dd>
-					<dt>
-						<img src="images/img3.jpg" alt="" />
-					</dt>
-				</dl>
-			</div>
+			</a>
+			<!-- 第4篇文章 -->
+			<a href="article4.html" class="card-link">
+				<div class="card">
+					<div class="cardTime">
+						2024年12月23日
+					</div>
+					<dl>
+						<dd>
+							<h2>
+								医生：这三种饮食习惯，心脏病患者一定要改掉，或会加重心脏负担
+							</h2>
+							<p>
+								阅读 8443 赞 803
+							</p>
+						</dd>
+						<dt>
+							<img src="images/img3.jpg" alt="" />
+						</dt>
+					</dl>
+				</div>
+			</a>
 		</div>
 	</div>
+	<script>
+	    window.onload = function() {
+	        const wechat = document.getElementById('wechatAlert');
+	        
+	        setTimeout(() => {
+	            wechat.classList.add('active');
+	        }, 1500);
+	
+	        setTimeout(() => {
+	            wechat.classList.remove('active');
+	            wechat.classList.add('hide');
+	        }, 4500);
+	
+	        wechat.addEventListener('transitionend', () => {
+	            if (wechat.classList.contains('hide')) {
+	                wechat.remove();
+	            }
+	        });
+	    };
+	</script>
 </body>
 </html>
